fix spacing/sizing issues

--- a/src/styles/page/Footer.css
+++ b/src/styles/page/Footer.css
@@ -7,6 +7,7 @@
   padding: 20px 0;
   bottom: 0;
   width: 100%;
+  font-size: 1em;
 }
 
 .footer-link {
@@ -31,4 +32,8 @@
 
 @media (prefers-color-scheme: light) {
   .footer-link, .footer-divider { color: rgba(128, 63, 151, 0.7); }
+}
+
+@media (max-width: 450px) {
+  .footer { font-size: 0.8em; }
 }
